# AutoStaveDetection

./: .gitignore  CMakeLists.txt  Makefile  NoteWeaver  README.md  cmake_install.cmake  main.cpp
cpp/: Score.cpp  Score.h  Sheet.cpp  Sheet.h  Utilities.cpp  Utilities.h
python/: AutoStaveDetection.py  EDA.ipynb  Example.py  Utils.py  convert_pdf_to_png.py
swift/NoteWeaver/NoteWeaver/: MainContentView.swift  NoteWeaverApp.swift
swift/NoteWeaver/NoteWeaver.xcodeproj/: project.pbxproj
swift/NoteWeaver/NoteWeaver.xcodeproj/project.xcworkspace/xcuserdata/srikur.xcuserdatad/: UserInterfaceState.xcuserstate
swift/NoteWeaver/NoteWeaver.xcodeproj/xcuserdata/srikur.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/NoteWeaver/NoteWeaverTests/: NoteWeaverTests.swift
swift/NoteWeaver/NoteWeaverUITests/: NoteWeaverUITests.swift  NoteWeaverUITestsLaunchTests.swift
